--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             <h1 id="t2" style="color:green"></h1>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="./client/js/app.js"></script>
+        <script src="./client/js/index.js"></script>
     </body>
 </html>
